--- a/src/main/resources/templates/regUser.html
+++ b/src/main/resources/templates/regUser.html
@@ -15,7 +15,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <title>Films</title>
+    <title>Registration</title>
 </head>
 <body>
 <div class="container">
@@ -36,9 +36,6 @@
                         </label>
                         <label for="password">Password
                             <input type="text" class="form-control" name="password" id="password">
-                        </label>
-                        <label for="phone">Phone number
-                            <input type="text" class="form-control" name="phone" id="phone">
                         </label>
                     </div>
                     <div th:if="${fail}" class="alert alert-danger" role="alert">
