--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,10 +28,7 @@
             </div>
             <div class="card-body">
                 <div th:if="${fail}" class="alert alert-danger" role="alert">
-                    Login or password you entered is invalid!
-                </div>
-                <div th:if="${fail}" class="alert alert-danger" role="alert">
-                    Login or password you entered is invalid!
+                    Login or password is wrong or this user is incorrect
                 </div>
                 <form th:action="@{/login}" method="POST">
                     <div class="form-group">
